@@ -1,257 +1,0 @@
-{
-  _______________________________________________________________________________________________
-
-                                           C F D W A R P
-
-                                CFD Code for Plasma & Reactive Flow
-  _______________________________________________________________________________________________
-
-  Version                          22oct13a
-  Compiler                         gcc 8.3.0 with OPENMP threads with assertions
-  Compiled on                      Oct 14 2022 at 16:45:39
-  Cycle Strategy                   Standard
-  Fluid Relaxation                 Block ADI [1,2]
-  EM Field Relaxation              None
-  Convection Discretization        Reconstruction-Evolution MUSCL with flux FVS [3], FDS [5],
-                                   and primitive interpolation TVD [4], WENO [7], CWENO [9],
-                                   AOWENO [8], and eigenvalue conditioning HARTEN, GNOFFO [10],
-                                   PECLET [11], PASCAL [6], and PARENT positivity-preserving
-                                   filter [12]
-  Temporal Discretization          Steady-State
-  Fluid Model                      Navier-Stokes Perfect Gas
-  Thermodynamic Model              Perfect Gas
-  Chemical Model                   Air 1 species 0 reaction
-  EM Field Model                   None
-  Beam Model                       None
-  Number of Dimensions             2
-  Number of Flux Components        4
-  _______________________________________________________________________________________________
-
-  [1]  WR Briley and H McDonald. "On the Structure and Use of Linearized Block Implicit
-       Schemes", Journal of Computational Physics 34:54-73, 1980.
-  [2]  RM Beam and RF Warming. "An Implicit Finite-Difference Algorithm for Hyperbolic Systems
-       in Conservation-Law-Form", Journal of Computational Physics 22:87-110, 1976.
-  [3]  JL Steger and RF Warming. "Flux Vector Splitting of the Inviscid Gasdynamic Equations
-       with Application to Finite-Difference Methods", Journal of Computational Physics 40:263-
-       293, 1981.
-  [4]  WK Anderson, JL Thomas, and B Van Leer. "Comparison of Finite Volume Flux Vector
-       Splittings for the Euler Equations", AIAA Journal 24:1453-1460, 1986.
-  [5]  PL Roe. "Approximate Riemann Solvers, Parameter Vectors, and Difference Schemes", Journal
-       of Computational Physics 43:357-372, 1981.
-  [6]  B Parent. "Positivity-Preserving Dual Time Stepping Schemes for Gas Dynamics", Journal of
-       Computational Physics 361:391-411, 2018.
-  [7]  G Jiang and CW Shu. "Efficient Implementation of Weighted ENO Schemes", Journal of
-       Computational Physics 126:202-228, 1996.
-  [8]  DS Balsara, S Garain, and CW Shu. "An Efficient Class of WENO schemes with Adaptive
-       Order", Journal of Computational Physics 326:780-804, 2016.
-  [9]  M Dumbser and M Kaser. "Arbitrary High Order Non-oscillatory Finite Volume Schemes on
-       Unstructured Meshes for Linear Hyperbolic Systems", Journal of Computational Physics,
-       221:693-723, 2007.
-  [10] P Gnoffo and  JA White. "Computational Aerothermodynamic Simulation Issues on
-       Unstructured Grids", 37th AIAA Thermophysics Conference, AIAA Paper 2004-2371, 2004.
-  [11] B Parent. "Multidimensional High-Resolution Schemes for Viscous Hypersonic Flows", AIAA
-       Journal, 55:141-152, 2017.
-  [12] B Parent. "Making a Flux Positivity-Preserving: A General Purpose Filter for the Euler
-       Equations", AIAA Paper 2019-0906, AIAA Scitech, San Diego CA, 2019.
-
-
-}
-
- 
-
-is=1;
-ie=30;
-js=1;
-je=30;
-
-Grid(
-  Size(is,js, ie,je);
-  Point(is,js, 0.0e0,0.0e0);
-  Point(ie,js, 1.0e0,0.2e0);
-  Point(ie,je, 1.0e0,1.0e0);
-  Point(is,je, 0.0e0,1.0e0);
-  JoinCorners(is,js, ie,je,  EE,0.5e0,1.0e0,1.0e0,  EE,0.5e0,1.0e0,1.0e0);
-);
-
-
-Bdry(
-  NavierStokesPerfect(
-    {
-    _________________________________________________________________________________________
-
-    Boundary Condition Type    ID    Description
-    _________________________________________________________________________________________
-
-    BDRY_INFLOWSUPERSONIC      0     Inflow, supersonic
-    BDRY_OUTFLOWSUPERSONIC1    1     Outflow, supersonic, 1o
-    BDRY_SYMMETRICAL1          2     Symmetrical, 1o
-    BDRY_SYMMETRICAL2          3     Symmetrical, 2o
-    BDRY_SYMMETRICAL3          8     Symmetrical, 3o
-    BDRY_WALLTFIXED1           4     Wall, T specified, 1o, param Twall
-    BDRY_WALLTFIXED2           a     Wall, T specified, 2o, param Twall
-    BDRY_WALLADIABATIC1        5     Wall, adiabatic, 1o
-    BDRY_WALLADIABATIC2        b     Wall, adiabatic, 2o
-    BDRY_INFLOWSUBSONIC1       6     Subsonic Inflow 1o (Constant Tstag, Pstag at inflow)
-    BDRY_OUTFLOWSUBSONIC1      7     Subsonic Outflow 1o (Constant P at outflow)
-    BDRY_FREESTREAM1           9     Freestream, 1o, params Vx,Vy, P, T
-    _________________________________________________________________________________________
-    }
-    All(BDRY_OUTFLOWSUPERSONIC1);
-    Plane("i",is,BDRY_INFLOWSUPERSONIC);
-    Plane("i",ie,BDRY_OUTFLOWSUPERSONIC1);
-    Twall=300.0; {K}
-    Plane("j",js,BDRY_SYMMETRICAL1,Twall);
-    Plane("j",je,BDRY_SYMMETRICAL1,Twall);
-    {
-    Cut(is,js,  ie,je);
-    Region(is,js,  ie,je,  BDRY_INFLOWSUPERSONIC);
-    Link(i1,j1,  i2,j2);
-    }
-  );
-);
- 
- 
-Model(
-  NavierStokesPerfect(
-    gamma=1.4;
-    R=286.0;        {J/kgK }
-    ETAMODEL=ETAMODEL_CONSTANT;     
-    eta=1.716e-5;       {kg/ms}
-    Pr=0.71;     
-    Pmin=1.0e-2;    Pmax=9.9e99;   {Pa}
-    Tmin=1.0e1;     Tmax=26.0e3;    {K}
-    AXISYMMETRIC=FALSE;
-    SetBodyForce(is,js, ie,je, 0.0{N/m3},0.0{N/m3});
-    SetHeatDeposited(is,js, ie,je, 0.0 {W/m3});
-    {
-    AddHeatPoint(0.0{x,m},0.0{y,m}, 0.1{radius,m}, 0.0{W/m});
-    }
-  );
-);
-
-
-Init(
-  NavierStokesPerfect(
-    {
-    _______________________________________________________________________________________
-
-    Initial Condition Type       Parameters
-    _______________________________________________________________________________________
-
-    INIT_TYPE1                   V[1]..V[nd],  P,  T     
-    INIT_TYPE2                   M[1]..M[nd],  P,  T     
-    INIT_TYPE3                   V[1]..V[nd],  P,  rho   
-    _______________________________________________________________________________________
-    }
-    Mx=2;
-    My=0;
-    P=10000; {Pa}
-    T=300; {K}
-    All(INIT_TYPE2,Mx,My,P,T);
-    {
-    Bdry(BDRY_WALLTFIXED1, INIT_TYPE2, Mx,My,P,T);
-    Region(is,js,  ie,je,  INIT_TYPE2, Mx,My,P,T);
-    }
-  );
-);
-
-
-Disc(
-  NavierStokesPerfect(
-    zetaA1=0.1e0;    {conditions the eigenvalue of the A jacobian}
-    zetaA2=0.2e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
-  );
-  MUSCL(
-    FLUX=FLUX_FDS;
-    AVERAGING=AVERAGING_ROE;
-    AOWENO_TYPE=AOWENO_TYPE_DIFFUSIVE;
-    AOWENO_gammalo=0.85;
-    AOWENO_gammahi=0.85;
-    INTERPOL=INTERPOL_TVD2_VANLEER;
-    EIGENVALCOND=EIGENVALCOND_PECLET;
-    POSFILTER=POSFILTER_NONE;
-    POSFILTER_numiter=4;
-  );
-);
-
-
-Cycle(
-  NavierStokesPerfect(
-    xiverge=1e-3;  {residual convergence threshold}
-    rhoref=1.0;  {reference density in kg/m3}
-    aref=300.0;  {reference sound speed in m/s}
-    Uref[1]=rhoref;            
-    for (dim,1,numdim,
-      Uref[1+dim]=rhoref*aref;
-    );
-    Uref[2+numdim]=rhoref*aref*aref;
-  );
-  SteadyState(
-    if (mod(iter,50)==0,
-      WriteDataFile(outputfilename);
-    );
-    sigma1=0.3;   {exponent of maximum pseudotime step in all dimensions}
-    sigma2=0.0;   {exponent of maximum pseudotime step in all fluxes}
-    if (iter==1,
-      CFL=0.01;
-    );
-    CFL=min(CFL*1.05,0.5);
-    UpdateFluid(CFL,PRECON_LOCALTIMESTEP,sigma1,sigma2);
-    printf("%6.2f %6ld %9.3f   %E (%4ld,%4ld)  %s\n",
-           CFL,iter,effiter_U,ximax,i_ximax,
-           j_ximax,clipinfo);
-  );
-);
-
-
-Post(
-  xstation[1]=0.1; {m}
-  xstation[2]=0.2; {m}
-  xstation[3]=0.3; {m}
-  numsteps=300;
-  qmin=1.0; {m/s, as small a value as possible}
-  Pback_min=400; {Pa}
-  Pback_max=40000; {Pa}
-  Aback=1.0; {m2/m}
-  for (cnt,1,3,
-    XSTATION_Set(xstation[cnt]);
-    Pback=XSTATION_Pback(Aback, Pback_min, Pback_max, numsteps, qmin);
-    Fpot=XSTATION_Fpot(Pback, numsteps, qmin);
-    mdot=XSTATION_mdot();
-    Tstag=XSTATION_Tstag();
-    Pstag=XSTATION_Pstag(numsteps);
-    Pstar=XSTATION_Pstar();
-    T=XSTATION_T();
-    q=XSTATION_q();
-    rho=XSTATION_rho();
-    htstar=XSTATION_htstar();
-    fprintf(postfilename,"x      = %E m\n"
-           "Pback  = %E Pa\n"
-           "Fpot   = %E Ns/kg\n"
-           "mdot   = %E kg/ms\n"
-           "htstar = %E J/kg\n"
-           "Tstag  = %E K\n"
-           "Pstag  = %E Pa\n"
-           "Pstar  = %E Pa\n"
-           "T      = %E K\n"
-           "q      = %E m/s\n"
-           "rho    = %E kg/m3\n\n"
-           ,xstation[cnt],Pback,Fpot,mdot,htstar,Tstag,Pstag,Pstar,T,q,rho);
-  );
-  fprintf(postfilename,"\n");
-  for (dim,1,2,
-    Area[dim]=_Area(is,js, ie,je, dim,BDRY_WALLTFIXED1);
-    Fshear[dim]=_Fshear(is,js, ie,je, dim,BDRY_WALLTFIXED1);
-    Fpressure[dim]=_Fpressure(is,js, ie,je, dim,BDRY_WALLTFIXED1);
-  );
-  fprintf(postfilename,"Fshear    = (%+E,%+E) N/m\n",Fshear[1],Fshear[2]);
-  fprintf(postfilename,"Fpressure = (%+E,%+E) N/m\n",Fpressure[1],Fpressure[2]);
-  fprintf(postfilename,"Qheat     = %+E W/m\n",_Qheat(is,js, ie,je, BDRY_WALLTFIXED1));
-  fprintf(postfilename,"metotal   = %+E J/m\n",_metotal(is,js, ie,je));
-  fprintf(postfilename,"m         = %+E J/m\n",_m(is,js, ie,je));
-  fprintf(postfilename,"\n");
-  {
-  POSTGRIDONLY=FALSE;
-  WritePostFile(is,js, ie,je, "post.01", "tecplot", POSTGRIDONLY);
-  }
-);
